maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:2: error: identifier expected but 'new' found.
def trouvee_baggle(): new Array[Int](2) = {
                      ^